--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,12 @@ spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=scannerdb;enc
 spring.datasource.username=myuser
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+
+spring.flyway.baseline-on-migrate=true
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
