--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
 spring.application.name=ScannerAPI
 
+
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=scannerdb;encrypt=true;trustServerCertificate=true
 spring.datasource.username=myuser
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
+jwt.secret=${JWT_SECRET}
+
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+spring.jpa.open-in-view=false
 
 spring.flyway.baseline-on-migrate=true
 spring.flyway.enabled=true
